--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,4 +1,8 @@
 {
   "sign_in": "SignIn",
-  "home_page": "Home Page"
+  "home_page": "Home Page",
+  "notify": "Notification",
+  "gender": "Gender",
+  "male": "Male",
+  "female": "female"
 }
